--- a/Sediin.Core.WebUi/appsettings.json
+++ b/Sediin.Core.WebUi/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
-    //"AuthenticationConnection": "Server=DELL-GALLETTI\\SQLEXPRESS;Initial Catalog=Auth;User ID=sa;Password=Passw0rd.;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False;",
-    "AuthenticationConnection": "Server=DELL-GALLETTI\\SQLEXPRESS;Initial Catalog=aspnet-WebApp1-53bc9b9d-9d6a-45d4-8429-2a2761773502;User ID=sa;Password=Passw0rd.;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False;",
-    "ApplicationConnection": "Server=DELL-GALLETTI\\SQLEXPRESS;Initial Catalog=Utility;User ID=sa;Password=Passw0rd.;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False;"
+    //"SediinCoreIdentityConnection": "Server=DELL-GALLETTI\\SQLEXPRESS;Initial Catalog=Auth;User ID=sa;Password=Passw0rd.;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False;",
+    "SediinCoreIdentityConnection": "Server=.;Database=aspnet-WebApp1-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True; TrustServerCertificate=True",
+    "SediinCoreDataAccessConnection": "Server=DELL-GALLETTI\\SQLEXPRESS;Initial Catalog=Utility;User ID=sa;Password=Passw0rd.;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False;"
   },
   //"Logging": {
   //  "LogLevel": {
