--- a/Sediin.Core.WebUi/Sediin.Core.WebUi.csproj
+++ b/Sediin.Core.WebUi/Sediin.Core.WebUi.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Administrator\Data\" />
+    <Folder Include="wwwroot\lib\jquery-unobtrusive\" />
   </ItemGroup>
 
   <ItemGroup>
