--- a/Sediin.Core.Identity/Sediin.Core.Identity.csproj
+++ b/Sediin.Core.Identity/Sediin.Core.Identity.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Entitys\" />
+    <Folder Include="Entities\" />
     <Folder Include="Models\" />
   </ItemGroup>
 
