--- a/Sediin.Core.Mvc.Helpers/Sediin.Core.Mvc.Helpers.csproj
+++ b/Sediin.Core.Mvc.Helpers/Sediin.Core.Mvc.Helpers.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
+    <AssemblyName>Sediin.Core.Mvc.Helpers</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,7 +15,5 @@
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack.NetCore" Version="1.5.0.1" />
   </ItemGroup>
-
-
 
 </Project>
