--- a/Sediin.Core.Mvc.Helpers/Sediin.Core.Mvc.Helpers.csproj
+++ b/Sediin.Core.Mvc.Helpers/Sediin.Core.Mvc.Helpers.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.105.0" />
     <PackageReference Include="HtmlAgilityPack.NetCore" Version="1.5.0.1" />
   </ItemGroup>
 
