--- a/Sediin.Core.WebUi/Sediin.Core.WebUi.csproj
+++ b/Sediin.Core.WebUi/Sediin.Core.WebUi.csproj
@@ -8,6 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\Json\**" />
+    <Content Remove="wwwroot\Json\**" />
+    <EmbeddedResource Remove="wwwroot\Json\**" />
+    <None Remove="wwwroot\Json\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="HtmlAgilityPack.NetCore" Version="1.5.0.1" />
     <PackageReference Include="MailKit" Version="4.13.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.6" />
@@ -27,7 +34,6 @@
     <Folder Include="Areas\Backend\Views\Data\" />
     <Folder Include="Areas\TemplateEmail\Controllers\" />
     <Folder Include="Areas\TemplateEmail\Data\" />
-    <Folder Include="wwwroot\Json\" />
     <Folder Include="wwwroot\lib\jquery-unobtrusive\" />
   </ItemGroup>
 
