email settings da config.json

--- a/Sediin.Core.WebUi/appsettings.json
+++ b/Sediin.Core.WebUi/appsettings.json
@@ -1,9 +1,9 @@
 {
   "ConnectionStrings": {
-    //"SediinCoreIdentityConnection": "Server=DELL-GALLETTI\\SQLEXPRESS;Initial Catalog=aspnet-WebApp1-53bc9b9d-9d6a-45d4-8429-2a2761773502;User ID=sa;Password=Passw0rd.;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False;",
-    //"SediinCoreDataAccessConnection": "Server=DELL-GALLETTI\\SQLEXPRESS;Initial Catalog=Utility;User ID=sa;Password=Passw0rd.;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False;"
-    "SediinCoreIdentityConnection": "Server=.;Database=aspnet-WebApp1-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True; TrustServerCertificate=True",
-    "SediinCoreDataAccessConnection": "Server=.;Database=Utility;Trusted_Connection=True; TrustServerCertificate=True"
+    "SediinCoreIdentityConnection": "Server=DELL-GALLETTI\\SQLEXPRESS;Initial Catalog=aspnet-WebApp1-53bc9b9d-9d6a-45d4-8429-2a2761773502;User ID=sa;Password=Passw0rd.;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False;",
+    "SediinCoreDataAccessConnection": "Server=DELL-GALLETTI\\SQLEXPRESS;Initial Catalog=Utility;User ID=sa;Password=Passw0rd.;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False;"
+    //"SediinCoreIdentityConnection": "Server=.;Database=aspnet-WebApp1-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True; TrustServerCertificate=True",
+    //"SediinCoreDataAccessConnection": "Server=.;Database=Utility;Trusted_Connection=True; TrustServerCertificate=True"
   },
   //"Logging": {
   //  "LogLevel": {
@@ -66,16 +66,16 @@
   },
   "AllowedHosts": "*",
   "UrlPortale": "https://localhost:7297/",
-  "EmailSettings": {
-    "FromEmail": "info@SediinCoreWebUi.it",
-    "FromName": "Sediin.Core WebUi",
-    "SmtpPassword": "aldj oipd hmzp jbnv",
-    "SmtpPort": 587,
-    "SmtpServer": "smtp.gmail.com",
-    "SmtpServerAutentication": true,
-    "SmtpServerUseSSL": true,
-    "SmtpUsername": "c.galletti@sediin.it"
-  },
+  //"EmailSettings": {
+  //  "SmtpServer": "smtp.gmail.com",
+  //  "SmtpPort": 587,
+  //  "SmtpUsername": "c.galletti@sediin.it",
+  //  "SmtpPassword": "aldj oipd hmzp jbnv",
+  //  "SmtpServerAutentication": true,
+  //  "SmtpServerUseSSL": true,
+  //  "FromName": "Sediin.Core WebUi",
+  //  "FromEmail": "info@SediinCoreWebUi.it",
+  //},
   "ApplicationSettings": {
     "ApplicationName": "Sediin.Core WebUi"
   }
