--- a/Sediin.Core.Identity/Sediin.Core.Identity.csproj
+++ b/Sediin.Core.Identity/Sediin.Core.Identity.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Abstract\IUnitOfWorkDataAccess.cs" />
+    <Compile Remove="Repository\UnitOfWorkIdentity.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
