--- a/Sediin.Core.DataAccess/Sediin.Core.DataAccess.csproj
+++ b/Sediin.Core.DataAccess/Sediin.Core.DataAccess.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Abstract\IUnitOfWorkDataAccess.cs" />
+    <Compile Remove="Repository\UnitOfWorkDataAccess.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6">
       <PrivateAssets>all</PrivateAssets>
